# anime-today-scraper

./: README.md  pyproject.toml  scrape.py
